--- a/index.html
+++ b/index.html
@@ -706,11 +706,35 @@ perfisEmissores.forEach((perfil, index) => {
             adicionarLog(' Processando resultados...\n');
 
             // Processar logs da resposta
-            if (resultado.logs && Array.isArray(resultado.logs)) {
-                resultado.logs.forEach(log => {
-                    adicionarLog(log);
-                });
-            }
+            // Mostrar logs detalhados
+if (resultado.logs && Array.isArray(resultado.logs)) {
+  resultado.logs.forEach(log => {
+    const logStr = typeof log === 'string' ? log : JSON.stringify(log, null, 2);
+    adicionarLog(logStr);
+  });
+}
+
+// Mostrar resumo visual
+if (resultado.resumo) {
+  adicionarLog("───────────────────────────────");
+  adicionarLog("📊 RESUMO FINAL 📊");
+  adicionarLog(`✅ Sucessos: ${resultado.resumo.sucessos}`);
+  adicionarLog(`❌ Erros: ${resultado.resumo.erros}`);
+  adicionarLog(`📈 Taxa de Sucesso: ${resultado.resumo.taxa_sucesso}`);
+  adicionarLog("───────────────────────────────");
+}
+
+// Mostrar erros detalhados
+if (resultado.errosDetalhados && Array.isArray(resultado.errosDetalhados)) {
+  adicionarLog("❌ Erros Detalhados:");
+
+  resultado.errosDetalhados.forEach((erro, i) => {
+    adicionarLog(`\n[${i + 1}]`);
+    adicionarLog(`👤 Emissor: ${erro.perfil}`);
+    adicionarLog(`🎯 Alvo: ${erro.alvo}`);
+    adicionarLog(`⚠️ Erro: ${erro.erro}`);
+  });
+}
 
             // Mostrar resumo
             if (resultado.resumo) {
@@ -1015,11 +1039,37 @@ document.querySelectorAll("#selecionar-emissores input[type='checkbox']:checked"
             adicionarLog(' Processando resultados...\n');
 
             // Processar logs da resposta
-            if (resultado.logs && Array.isArray(resultado.logs)) {
-                resultado.logs.forEach(log => {
-                    adicionarLog(log);
-                });
-            }
+            // Mostrar logs detalhados
+if (resultado.logs && Array.isArray(resultado.logs)) {
+  resultado.logs.forEach(log => {
+    const logStr = typeof log === 'string' ? log : JSON.stringify(log, null, 2);
+    adicionarLog(logStr);
+  });
+}
+
+// Mostrar resumo visual
+if (resultado.resumo) {
+  adicionarLog("───────────────────────────────");
+  adicionarLog("📊 RESUMO FINAL 📊");
+  adicionarLog(`✅ Sucessos: ${resultado.resumo.sucessos}`);
+  adicionarLog(`❌ Erros: ${resultado.resumo.erros}`);
+  adicionarLog(`📈 Taxa de Sucesso: ${resultado.resumo.taxa_sucesso}`);
+  adicionarLog("───────────────────────────────");
+}
+
+// Mostrar erros detalhados
+if (resultado.errosDetalhados && Array.isArray(resultado.errosDetalhados)) {
+  adicionarLog("❌ Erros Detalhados:");
+
+  resultado.errosDetalhados.forEach((erro, i) => {
+    adicionarLog(`\n[${i + 1}]`);
+    adicionarLog(`👤 Emissor: ${erro.perfil}`);
+    adicionarLog(`🎯 Alvo: ${erro.alvo}`);
+    adicionarLog(`⚠️ Erro: ${erro.erro}`);
+  });
+}
+
+
 
             // Mostrar resumo
             if (resultado.resumo) {
