--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body {
     right: 10px;
     background: var(--danger-color);
     border: none;
-    border-radius: 50%;
+    border-radius: %;
     width: 30px;
     height: 30px;
     display: flex;
@@ -279,7 +279,7 @@ body {
     <h3 class="section-title">
         <i class="fas fa-user-plus"></i>
         Perfis Emissores
-        <span class="counter" id="emissorCounter">0/50</span>
+        <span class="counter" id="emissorCounter">0/500</span>
     </h3>
 
     <div class="row">
@@ -416,8 +416,8 @@ body {
 
     // Função para adicionar perfil emissor
     function adicionarPerfil() {
-        if (perfisEmissores.length >= 50) {
-            alert('Máximo de 50 perfis emissores atingido!');
+        if (perfisEmissores.length >= 500) {
+            alert('Máximo de 500 perfis emissores atingido!');
             return;
         }
 
@@ -476,7 +476,7 @@ body {
                     <div class="col-md-6">
                         <strong>Cookie:</strong>
 
-                        <code>${perfil.cookie.substring(0, 50)}...</code>
+                        <code>${perfil.cookie.substring(0, 500)}...</code>
                     </div>
                     <div class="col-md-2">
                         <strong>fb_dtsg:</strong>
@@ -620,7 +620,7 @@ perfisEmissores.forEach((perfil, index) => {
                 if (dados.perfis && Array.isArray(dados.perfis)) {
                     // Confirmar importação
                     if (confirm(`Importar ${dados.perfis.length} perfis? (Isso substituirá os perfis atuais)`)) {
-                        perfisEmissores = dados.perfis.slice(0, 50); // Limitar a 50
+                        perfisEmissores = dados.perfis.slice(0, 500); // Limitar a 500
                         atualizarListaPerfis();
                         atualizarContadores();
                         adicionarLog(` ${perfisEmissores.length} perfis importados com sucesso!`);
@@ -776,8 +776,8 @@ perfisEmissores.forEach((perfil, index) => {
 
     // Melhorar validação do perfil
     function adicionarPerfilMelhorado() {
-        if (perfisEmissores.length >= 50) {
-            alert('Máximo de 50 perfis emissores atingido!');
+        if (perfisEmissores.length >= 500) {
+            alert('Máximo de 500 perfis emissores atingido!');
             return;
         }
 
